--- a/app/views/habits/index.html.erb
+++ b/app/views/habits/index.html.erb
@@ -1,4 +1,13 @@
-<div>
-  <h1 class="font-bold text-4xl">Habits#index</h1>
-  <p>Find me in app/views/habits/index.html.erb</p>
-</div>
+<h1>Your Habits</h1>
+
+<%= link_to "New Habit", new_habit_path, class: "btn btn-primary" %>
+
+<ul>
+  <% @habits.each do |habit| %>
+    <li>
+      <strong><%= habit.name %></strong> - <%= habit.description %>
+      <%= link_to "Edit", edit_habit_path(habit) %> |
+      <%= link_to "Delete", habit_path(habit), method: :delete, data: { confirm: "Are you sure?" } %>
+    </li>
+  <% end %>
+</ul>
