--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,8 @@
 
      <script src="https://cdn.tailwindcss.com"></script>
      <script type="module" src="https://cdn.jsdelivr.net/npm/@hotwired/turbo@latest/dist/turbo.es2017-esm.min.js"></script>
-     <%= javascript_importmap_tags %>
-     <%= javascript_include_tag "application", "data-turbo-track": "reload" %>
+     <%#= javascript_importmap_tags %>
+     <%#= javascript_include_tag "application", "data-turbo-track": "reload" %>
   </head>
 
   <body>
